# poolsplit

./: .gitignore  CHANGELOG.md  README.md  example.py  poolsplit.py  pyproject.toml
.github/workflows/: test.yml
docs/: starvation.md
tests/: test_poolsplit.py
