[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poolsplit"
version = "0.1.0"
description = "Pool-split retrieval for agent memory: reserved per-type budgets so low-priority entries surface and always-scope corrections never get crowded out."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Garcia" }]
keywords = ["memory", "retrieval", "agent", "llm", "context"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
only-include = ["poolsplit.py"]

[tool.hatch.build.targets.sdist]
include = [
    "poolsplit.py",
    "example.py",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
